--- a/packages/default/scss/common/_base.scss
+++ b/packages/default/scss/common/_base.scss
@@ -220,7 +220,7 @@
     .k-drop-hint-start,
     .k-drop-hint-end {
         flex-shrink: 0;
-        border-width: ($drop-hint-arrow-size / 2);
+        border-width: k-math-div( $drop-hint-arrow-size, 2 );
         border-style: solid;
         border-color: transparent;
     }
@@ -232,7 +232,7 @@
 
     .k-drop-hint-h {
         .k-drop-hint-start {
-            border-left-width: (($drop-hint-arrow-size / 2) * $equilateral-index);
+            border-left-width: ( k-math-div( $drop-hint-arrow-size, 2 ) * $equilateral-index );
             border-left-color: $drop-hint-bg;
             border-right-width: 0;
         }
@@ -243,7 +243,7 @@
         }
 
         .k-drop-hint-end {
-            border-right-width: (($drop-hint-arrow-size / 2) * $equilateral-index);
+            border-right-width: ( k-math-div( $drop-hint-arrow-size, 2 ) * $equilateral-index );
             border-right-color: $drop-hint-bg;
             border-left-width: 0;
         }
@@ -253,7 +253,7 @@
         flex-direction: column;
 
         .k-drop-hint-start {
-            border-top-width: (($drop-hint-arrow-size / 2) * $equilateral-index);
+            border-top-width: ( k-math-div( $drop-hint-arrow-size, 2 ) * $equilateral-index );
             border-top-color: $drop-hint-bg;
             border-bottom-width: 0;
         }
@@ -264,7 +264,7 @@
         }
 
         .k-drop-hint-end {
-            border-bottom-width: (($drop-hint-arrow-size / 2) * $equilateral-index);
+            border-bottom-width: ( k-math-div( $drop-hint-arrow-size, 2 ) * $equilateral-index );
             border-bottom-color: $drop-hint-bg;
             border-top-width: 0;
         }
