--- a/packages/default/scss/editor/_layout.scss
+++ b/packages/default/scss/editor/_layout.scss
@@ -268,8 +268,8 @@
     // Insert table
     .k-ct-popup {
         box-sizing: border-box;
-        width: $ct-cell-size * 10 - ($ct-cell-size / 2);
-        padding: $ct-cell-size / 4;
+        width: $ct-cell-size * 10 - k-math-div( $ct-cell-size, 2 );
+        padding: k-math-div( $ct-cell-size, 4 );
 
         .k-button {
             width: 100%;
