--- a/packages/material/scss/table/_variables.scss
+++ b/packages/material/scss/table/_variables.scss
@@ -31,19 +31,19 @@ $kendo-table-cell-padding-y: null !default;
 $kendo-table-sizes: (
     sm: (
         font-size: $font-size-md,
-        line-height: ( 20 / 14 ),
+        line-height: k-math-div( 20, 14 ),
         cell-padding-x: k-map-get( $spacing, 4 ),
         cell-padding-y: k-map-get( $spacing, 2 ) + k-map-get( $spacing, thin )
     ),
     md: (
         font-size: $font-size-md,
-        line-height: ( 20 / 14 ),
+        line-height: k-math-div( 20, 14 ),
         cell-padding-x: k-map-get( $spacing, 4 ),
         cell-padding-y: k-map-get( $spacing, 2 )
     ),
     lg: (
         font-size: $font-size-md,
-        line-height: ( 20 / 14 ),
+        line-height: k-math-div( 20, 14 ),
         cell-padding-x: k-map-get( $spacing, 4 ),
         cell-padding-y: k-map-get( $spacing, 2 ) + k-map-get( $spacing, thin )
     )
