--- a/packages/bootstrap/scss/expansion-panel/_variables.scss
+++ b/packages/bootstrap/scss/expansion-panel/_variables.scss
@@ -8,7 +8,7 @@ $expander-border-width: 1px !default;
 $expander-header-padding-x: $padding-x-lg !default;
 $expander-header-padding-y: $padding-y * 2 !default;
 
-$expander-indicator-margin-x: calc( #{$padding-x / 2} * 1.5 ) !default;
+$expander-indicator-margin-x: calc( #{k-math-div( $padding-x, 2 )} * 1.5 ) !default;
 
 $expander-bg: $component-bg !default;
 $expander-text: $component-text !default;
