--- a/packages/bootstrap/scss/forms/_layout.scss
+++ b/packages/bootstrap/scss/forms/_layout.scss
@@ -23,7 +23,8 @@
         }
 
         .k-field-info {
-            margin: 0 $padding-x / 2;
+            margin-block: 0;
+            margin-inline: k-math-div( $padding-x, 2 );
         }
     }
 
