--- a/packages/classic/scss/breadcrumb/_variables.scss
+++ b/packages/classic/scss/breadcrumb/_variables.scss
@@ -14,7 +14,7 @@ $breadcrumb-text: $component-text !default;
 $breadcrumb-border: $component-border !default;
 
 $breadcrumb-delimiter-icon-font-size: $icon-size * .75 !default;
-$breadcrumb-delimiter-icon-padding-x: $padding-x-lg / 2 !default;
+$breadcrumb-delimiter-icon-padding-x: k-math-div( $padding-x-lg, 2 ) !default;
 $breadcrumb-delimiter-icon-padding-y: 0px !default;
 
 $breadcrumb-link-padding-x: $padding-x !default;
