--- a/packages/default/scss/_variables.scss
+++ b/packages/default/scss/_variables.scss
@@ -75,8 +75,8 @@ $icon-font-url: null !default;
 // Metrics
 $padding-x: 8px !default;
 $padding-y: 4px !default;
-$padding-x-sm: $padding-x / 2 !default;
-$padding-y-sm: $padding-y / 2 !default;
+$padding-x-sm: k-math-div( $padding-x, 2 ) !default;
+$padding-y-sm: k-math-div( $padding-y, 2 ) !default;
 $padding-x-lg: $padding-x * 1.5 !default;
 $padding-y-lg: $padding-y * 1.5 !default;
 
@@ -305,7 +305,7 @@ $disabled-opacity: .6 !default;
 // TODO: refactor once we extract drag drop as separate module
 $font-size: 14px !default;
 $font-family: inherit !default;
-$line-height: ( 20 / 14 ) !default;
+$line-height: k-math-div( 20, 14 ) !default;
 
 
 // Drop Hint
@@ -313,7 +313,7 @@ $equilateral-index: 1.7320508076 !default;
 $equilateral-height: .8660254038 !default;
 
 $drop-hint-arrow-size: 8px !default;
-$drop-hint-arrow-spacing: ($drop-hint-arrow-size / 2) !default;
+$drop-hint-arrow-spacing: k-math-div( $drop-hint-arrow-size, 2 ) !default;
 $drop-hint-line-h-width: 20px !default;
 $drop-hint-line-h-height: 1px !default;
 $drop-hint-line-v-width: $drop-hint-line-h-height !default;
