--- a/packages/default/scss/calendar/_layout.scss
+++ b/packages/default/scss/calendar/_layout.scss
@@ -348,7 +348,7 @@
                 z-index: 1;
                 width: 150%;
                 left: -25%;
-                box-shadow: 0 0 $calendar-cell-size ($calendar-cell-size / 2) $calendar-bg;
+                box-shadow: 0 0 $calendar-cell-size k-math-div( $calendar-cell-size, 2 ) $calendar-bg;
             }
         }
 
@@ -387,7 +387,7 @@
             width: 200%;
             left: -50%;
             $shadow-size: 3 * $calendar-navigation-item-height;
-            box-shadow: 0 0 $shadow-size ($shadow-size / 2) $calendar-navigation-bg;
+            box-shadow: 0 0 $shadow-size k-math-div( $shadow-size, 2 ) $calendar-navigation-bg;
         }
 
         &::before { top: 0; }
