--- a/packages/default/scss/dataviz/_layout.scss
+++ b/packages/default/scss/dataviz/_layout.scss
@@ -152,31 +152,31 @@
     }
 
     .k-left-handle {
-        left: -($selection-handle-size / 2);
+        left: - k-math-div( $selection-handle-size, 2 );
     }
 
     .k-right-handle {
-        right: -($selection-handle-size / 2);
+        right: - k-math-div( $selection-handle-size, 2 );
     }
 
     .k-left-handle div {
-        margin: -($selection-handle-size) 0 0 (-($selection-handle-size / 1.5));
-        padding: ($selection-handle-size * 2) (($selection-handle-size / 1.5) * 2) 0 0;
+        margin: -($selection-handle-size) 0 0 (- k-math-div( $selection-handle-size, 1.5 ));
+        padding: ($selection-handle-size * 2) (k-math-div( $selection-handle-size, 1.5 ) * 2) 0 0;
     }
 
     .k-right-handle div {
-        margin: -($selection-handle-size) 0 0 (-($selection-handle-size / 1.5));
-        padding: ($selection-handle-size * 2) 0 0 (($selection-handle-size / 1.5) * 2);
+        margin: -($selection-handle-size) 0 0 (- k-math-div( $selection-handle-size, 1.5 ));
+        padding: ($selection-handle-size * 2) 0 0 (k-math-div( $selection-handle-size, 1.5 ) * 2);
     }
 
     .k-left-handle.k-handle-active div {
         margin-left: -($selection-handle-size * 2);
-        padding-left: ($selection-handle-size * 2) + ($selection-handle-size / 1.5);
+        padding-left: ($selection-handle-size * 2) + k-math-div( $selection-handle-size, 1.5 );
     }
 
     .k-right-handle.k-handle-active div {
         margin-left: -($selection-handle-size * 2);
-        padding-right: ($selection-handle-size * 2) + ($selection-handle-size / 1.5);
+        padding-right: ($selection-handle-size * 2) + k-math-div( $selection-handle-size, 1.5 );
     }
 
     .k-mask {
