--- a/packages/default/scss/fab/_variables.scss
+++ b/packages/default/scss/fab/_variables.scss
@@ -20,14 +20,14 @@ $kendo-fab-line-height: $line-height !default;
 /// Horizontal padding of the FAB.
 /// @group floating-action-button
 $kendo-fab-padding-x: map-get( $spacing, 4 ) !default;
-$kendo-fab-padding-x-sm: ( $kendo-fab-padding-x / 2 ) !default;
+$kendo-fab-padding-x-sm: k-math-div( $kendo-fab-padding-x, 2 ) !default;
 $kendo-fab-padding-x-md: $kendo-fab-padding-x !default;
 $kendo-fab-padding-x-lg: ( $kendo-fab-padding-x * 1.5 ) !default;
 
 /// Vertical padding of the FAB.
 /// @group floating-action-button
 $kendo-fab-padding-y: $kendo-fab-padding-x !default;
-$kendo-fab-padding-y-sm: ( $kendo-fab-padding-y / 2 ) !default;
+$kendo-fab-padding-y-sm: k-math-div( $kendo-fab-padding-y, 2 ) !default;
 $kendo-fab-padding-y-md: $kendo-fab-padding-y !default;
 $kendo-fab-padding-y-lg: ( $kendo-fab-padding-y * 1.5 ) !default;
 
@@ -39,7 +39,7 @@ $kendo-fab-icon-width: 20px !default;
 $kendo-fab-icon-height: $kendo-fab-icon-width !default;
 /// FAB icon spacing.
 /// @group floating-action-button
-$kendo-fab-icon-spacing: map-get( $spacing, 1 ) / 2 !default;
+$kendo-fab-icon-spacing: k-math-div( map-get( $spacing, 1 ), 2 ) !default;
 
 /// FAB items horizontal padding.
 /// @group floating-action-button
