--- a/packages/default/scss/filemanager/_layout.scss
+++ b/packages/default/scss/filemanager/_layout.scss
@@ -105,7 +105,7 @@
 
         // File name
         .k-file-name {
-            margin-top: ($filemanager-spacer / 2);
+            margin-top: k-math-div( $filemanager-spacer, 2 );
             display: block;
             text-align: center;
             overflow: hidden;
