--- a/packages/default/scss/imageeditor/_layout.scss
+++ b/packages/default/scss/imageeditor/_layout.scss
@@ -106,14 +106,14 @@
 
         .k-resize-n,
         .k-resize-s {
-            left: calc( 50% - (#{$imageeditor-resize-handle-size / 2}) );
+            left: calc( 50% - (#{k-math-div( $imageeditor-resize-handle-size, 2 )}) );
             width: $imageeditor-resize-handle-size;
             height: 0;
         }
 
         .k-resize-w,
         .k-resize-e {
-            top: calc( 50% - (#{$imageeditor-resize-handle-size / 2}) );
+            top: calc( 50% - (#{k-math-div( $imageeditor-resize-handle-size, 2 )}) );
             width: 0;
             height: $imageeditor-resize-handle-size;
         }
