--- a/packages/default/scss/input/_layout.scss
+++ b/packages/default/scss/input/_layout.scss
@@ -359,12 +359,12 @@
             line-height: $_line-height;
 
             .k-input-values {
-                padding: ($_padding-y / 2);
-                gap: ($_padding-y / 2);
+                padding: k-math-div( $_padding-y, 2 );
+                gap: k-math-div( $_padding-y, 2 );
             }
             .k-input-values > .k-searchbar,
             .k-input-values > .k-input-inner {
-                margin: -($_padding-y / 2);
+                margin: - k-math-div( $_padding-y, 2 );
             }
 
             .k-input-inner {
