--- a/packages/default/scss/pdf-viewer/_variables.scss
+++ b/packages/default/scss/pdf-viewer/_variables.scss
@@ -22,7 +22,7 @@ $pdf-viewer-page-spacing: 30px !default;
 $pdf-viewer-page-bg: white !default;
 $pdf-viewer-page-text: $component-text !default;
 $pdf-viewer-page-border: $component-border !default;
-$pdf-viewer-page-shadow: 0 0 ($pdf-viewer-page-spacing / 2) $pdf-viewer-page-border !default;
+$pdf-viewer-page-shadow: 0 0 k-math-div( $pdf-viewer-page-spacing, 2 ) $pdf-viewer-page-border !default;
 
 $pdf-viewer-search-dialog-padding-x: $kendo-toolbar-padding-x-md !default;
 $pdf-viewer-search-dialog-padding-y: calc( #{$kendo-toolbar-padding-x-md} * 2 ) !default;
