--- a/packages/default/scss/pivotgrid/_variables.scss
+++ b/packages/default/scss/pivotgrid/_variables.scss
@@ -53,7 +53,7 @@ $pivotgrid-configurator-content-padding-x: $pivotgrid-spacer !default;
 $pivotgrid-configurator-content-padding-y: 2px !default;
 
 $pivotgrid-configurator-fields-margin-x: 0px !default;
-$pivotgrid-configurator-fields-margin-y: ( $pivotgrid-spacer / 2 ) !default;
+$pivotgrid-configurator-fields-margin-y: k-math-div( $pivotgrid-spacer, 2 ) !default;
 
 $pivotgrid-configurator-vertical-width: 320px !default;
 $pivotgrid-configurator-horizontal-height: 420px !default;
@@ -92,7 +92,7 @@ $pivotgrid-calculated-field-header-text: $header-text !default;
 $pivotgrid-calculated-field-header-border: null !default;
 
 
-$pivotgrid-treeview-padding-x: ( $pivotgrid-spacer / 2 ) !default;
+$pivotgrid-treeview-padding-x: k-math-div( $pivotgrid-spacer, 2 ) !default;
 $pivotgrid-treeview-padding-y: 0px !default;
 
 // Legacy variables
