--- a/packages/default/scss/scheduler/_layout.scss
+++ b/packages/default/scss/scheduler/_layout.scss
@@ -1101,7 +1101,8 @@
         }
 
         .k-scheduler-yearview .k-calendar-view .k-month {
-            margin: 0 ($scheduler-yearview-calendar-gap / 2);
+            margin-block: 0;
+            margin-inline: k-math-div( $scheduler-yearview-calendar-gap, 2 );
         }
     }
 
