--- a/packages/default/scss/taskboard/_variables.scss
+++ b/packages/default/scss/taskboard/_variables.scss
@@ -19,9 +19,9 @@ $taskboard-toolbar-gradient: null !default;
 $taskboard-content-padding-y: $taskboard-spacer !default;
 $taskboard-content-padding-x: $taskboard-content-padding-y !default;
 
-$taskboard-column-container-spacing-y: ( $taskboard-spacer / 2 ) !default;
+$taskboard-column-container-spacing-y: k-math-div( $taskboard-spacer, 2 ) !default;
 $taskboard-column-container-padding-y: 0px !default;
-$taskboard-column-container-padding-x: ( $taskboard-spacer / 2 ) !default;
+$taskboard-column-container-padding-x: k-math-div( $taskboard-spacer, 2 ) !default;
 $taskboard-columns-container-gap: $taskboard-spacer !default;
 
 $taskboard-column-width: 320px !default;
@@ -35,16 +35,16 @@ $taskboard-column-focus-bg: null !default;
 $taskboard-column-focus-text: null !default;
 $taskboard-column-focus-border: k-try-shade( $base-border, 2.5 ) !default;
 
-$taskboard-column-header-padding-y: ( $taskboard-spacer / 2 ) !default;
+$taskboard-column-header-padding-y: k-math-div( $taskboard-spacer, 2 ) !default;
 $taskboard-column-header-padding-x: $taskboard-column-header-padding-y !default;
-$taskboard-column-header-gap: ( $taskboard-spacer / 4 ) !default;
-$taskboard-column-header-actions-gap: ( $taskboard-spacer / 2 ) !default;
+$taskboard-column-header-gap: k-math-div( $taskboard-spacer, 4 ) !default;
+$taskboard-column-header-actions-gap: k-math-div( $taskboard-spacer, 2 ) !default;
 $taskboard-column-header-font-weight: 500 !default;
 $taskboard-column-header-text: $header-text !default;
 
 $taskboard-column-cards-padding-y: null !default;
 $taskboard-column-cards-padding-x: null !default;
-$taskboard-column-cards-gap: ( $taskboard-spacer / 2 ) !default;
+$taskboard-column-cards-gap: k-math-div( $taskboard-spacer, 2 ) !default;
 
 $taskboard-pane-width: $taskboard-column-width !default;
 $taskboard-pane-padding-y: null !default;
