--- a/packages/material/scss/_variables.scss
+++ b/packages/material/scss/_variables.scss
@@ -340,7 +340,7 @@ $equilateral-index: 1.7320508076 !default;
 $equilateral-height: .8660254038 !default;
 
 $drop-hint-arrow-size: 8px !default;
-$drop-hint-arrow-spacing: ($drop-hint-arrow-size / 2) !default;
+$drop-hint-arrow-spacing: k-math-div( $drop-hint-arrow-size, 2 ) !default;
 $drop-hint-line-h-width: 20px !default;
 $drop-hint-line-h-height: 1px !default;
 $drop-hint-line-v-width: $drop-hint-line-h-height !default;
@@ -425,12 +425,12 @@ $icon-focused-opacity: .87 !default;
 
 // Drag clue
 $drag-clue-padding-x: $padding-x !default;
-$drag-clue-padding-y: ($padding-x / 2) !default;
+$drag-clue-padding-y: k-math-div( $padding-x, 2 ) !default;
 $drag-clue-border-width: null !default;
 $drag-clue-border-radius: 9999px !default;
 $drag-clue-font-size: $font-size !default;
 $drag-clue-font-family: $font-family !default;
-$drag-clue-line-height: ( 20 / 14 ) !default;
+$drag-clue-line-height: k-math-div( 20, 14 ) !default;
 
 $drag-clue-bg: k-try-shade( $body-bg ) !default;
 $drag-clue-text: $body-text !default;
