--- a/packages/material/scss/breadcrumb/_variables.scss
+++ b/packages/material/scss/breadcrumb/_variables.scss
@@ -17,7 +17,7 @@ $breadcrumb-delimiter-icon-font-size: $icon-size * .75 !default;
 $breadcrumb-delimiter-icon-padding-x: $kendo-button-padding-y !default;
 $breadcrumb-delimiter-icon-padding-y: 0px !default;
 
-$breadcrumb-link-padding-x: ( $padding-x * 1.25 ) / 2 !default;
+$breadcrumb-link-padding-x: k-math-div( ( $padding-x * 1.25 ), 2 ) !default;
 $breadcrumb-link-padding-y: $padding-y !default;
 $breadcrumb-link-border-radius: $kendo-border-radius-md !default;
 
