--- a/packages/material/scss/dialog/_layout.scss
+++ b/packages/material/scss/dialog/_layout.scss
@@ -5,8 +5,8 @@
     .k-dialog-content.k-scroll {
         border-width: 1px 0;
         border-style: solid;
-        padding-top: #{$kendo-window-inner-padding-y / 2};
-        padding-bottom: #{$kendo-window-inner-padding-y / 2};
+        padding-top: #{k-math-div( $kendo-window-inner-padding-y, 2 )};
+        padding-bottom: #{k-math-div( $kendo-window-inner-padding-y, 2 )};
     }
 
 }
