--- a/packages/material/scss/orgchart/_variables.scss
+++ b/packages/material/scss/orgchart/_variables.scss
@@ -25,7 +25,7 @@ $orgchart-node-group-focus-border: $card-focus-border !default;
 $orgchart-node-group-focus-shadow: 0 2px 4px -1px rgba( $elevation, .2 ), 0 4px 5px 0 rgba( $elevation, .14 ), 0 1px 10px 0 rgba( $elevation, .12 ) !default;
 
 $orgchart-node-group-title-font-size: $font-size-xl !default;
-$orgchart-node-group-title-margin-bottom: $orgchart-spacer / 4 !default;
+$orgchart-node-group-title-margin-bottom: k-math-div( $orgchart-spacer, 4 ) !default;
 $orgchart-node-group-title-line-height: $line-height-sm !default;
 
 $orgchart-node-group-subtitle-font-size: $font-size !default;
@@ -48,7 +48,7 @@ $orgchart-card-subtitle-font-size: null !default;
 $orgchart-card-body-border-width: 2px 0 0 !default;
 $orgchart-card-body-border-color: transparent !default;
 
-$orgchart-card-body-vbox-margin-right: $orgchart-spacer / 2 !default;
+$orgchart-card-body-vbox-margin-right: k-math-div( $orgchart-spacer, 2 ) !default;
 $orgchart-card-body-vbox-min-height: $card-avatar-size !default;
 
 $orgchart-line-size: 1px !default;
