--- a/packages/material/scss/taskboard/_variables.scss
+++ b/packages/material/scss/taskboard/_variables.scss
@@ -35,16 +35,16 @@ $taskboard-column-focus-bg: null !default;
 $taskboard-column-focus-text: null !default;
 $taskboard-column-focus-border: k-try-shade( $base-border, 2.5 ) !default;
 
-$taskboard-column-header-padding-y: ( $taskboard-spacer / 2 ) !default;
+$taskboard-column-header-padding-y: k-math-div( $taskboard-spacer, 2 ) !default;
 $taskboard-column-header-padding-x: $taskboard-column-header-padding-y !default;
-$taskboard-column-header-gap: ( $taskboard-spacer / 4 ) !default;
-$taskboard-column-header-actions-gap: ( $taskboard-spacer / 2 ) !default;
+$taskboard-column-header-gap: k-math-div( $taskboard-spacer, 4 ) !default;
+$taskboard-column-header-actions-gap: k-math-div( $taskboard-spacer, 2 ) !default;
 $taskboard-column-header-font-weight: 500 !default;
 $taskboard-column-header-text: $header-text !default;
 
 $taskboard-column-cards-padding-y: null !default;
 $taskboard-column-cards-padding-x: null !default;
-$taskboard-column-cards-gap: ( $taskboard-spacer / 2 ) !default;
+$taskboard-column-cards-gap: k-math-div( $taskboard-spacer, 2 ) !default;
 
 $taskboard-pane-width: $taskboard-column-width !default;
 $taskboard-pane-padding-y: null !default;
@@ -65,7 +65,7 @@ $taskboard-pane-content-padding-x: $taskboard-spacer !default;
 $taskboard-pane-actions-padding-y: ( $taskboard-spacer * .75 ) !default;
 $taskboard-pane-actions-padding-x: $taskboard-spacer !default;
 
-$taskboard-card-padding-y: ( $taskboard-spacer / 2 ) !default;
+$taskboard-card-padding-y: k-math-div( $taskboard-spacer, 2 ) !default;
 $taskboard-card-padding-x: $taskboard-card-padding-y !default;
 $taskboard-card-border-width: 1px !default;
 $taskboard-card-border-radius: $card-border-radius !default;
