fix(material): use editor styles from default theme

--- a/packages/material/scss/editor/_theme.scss
+++ b/packages/material/scss/editor/_theme.scss
@@ -1,89 +1,1 @@
-@include exports("editor/theme") {
-
-    .k-editor {
-        @include fill(
-            $panel-text,
-            $panel-bg,
-            $panel-border
-        );
-
-        .k-editor-toolbar {}
-        .k-editable-area {
-            border-color: $panel-border;
-        }
-    }
-
-    // Inline Editor
-    .k-editor-inline {
-
-        .k-table {
-            &,
-            & td {
-                border-color: #cccccc;
-            }
-        }
-
-        .k-element-resize-handle-wrapper {
-            background-color: #ffffff;
-            border-color: #000000;
-        }
-
-        .k-column-resize-handle-wrapper {
-            .k-column-resize-handle {
-                .k-column-resize-marker {
-                    background-color: #00b0ff;
-                }
-            }
-        }
-
-        .k-row-resize-handle-wrapper {
-            .k-row-resize-marker {
-                background-color: #00b0ff;
-            }
-        }
-
-        // Hover & Active state
-        &:hover,
-        &.k-hover,
-        &.k-active {
-            border-color: $panel-border;
-        }
-    }
-
-    // Resizable images
-    .k-editor-resize-handle {
-        background-color: $kendo-editor-resize-handle-bg;
-        border-color: $kendo-editor-resize-handle-border;
-    }
-    .ProseMirror-selectednode { // sass-lint:disable-line class-name-format
-        outline-color: $kendo-editor-selectednode-outline-color;
-    }
-
-
-    // Insert table
-    .k-ct-popup {
-        .k-selected {
-            @include fill( $selected-text, $selected-bg, $selected-border, none );
-        }
-    }
-
-    // Content
-    .k-editor-content {
-
-        // Selection
-        .k-text-selected,
-        &::selection {
-            @include fill (
-                $color: $kendo-editor-selected-text,
-                $bg: $kendo-editor-selected-bg
-            );
-        }
-
-        .k-text-highlighted {
-            @include fill (
-                $bg: $kendo-editor-highlighted-bg
-            );
-        }
-    }
-
-}
+@import "~@progress/kendo-theme-default/scss/editor/_theme.scss";
