--- a/packages/bootstrap/scss/listbox/_variables.scss
+++ b/packages/bootstrap/scss/listbox/_variables.scss
@@ -26,13 +26,13 @@ $kendo-listbox-font-size: $font-size !default;
 $kendo-listbox-line-height: $line-height !default;
 /// Background color of the listbox.
 /// @group listbox
-$kendo-listbox-bg: $panel-bg !default;
+$kendo-listbox-bg: $component-bg !default;
 /// Text color of the listbox.
 /// @group listbox
-$kendo-listbox-text: $panel-text !default;
+$kendo-listbox-text: $component-text !default;
 /// Border color of the listbox.
 /// @group listbox
-$kendo-listbox-border: $panel-border !default;
+$kendo-listbox-border: $component-border !default;
 
 /// Inline item padding of the listbox.
 /// @group listbox
