--- a/packages/bootstrap/scss/spreadsheet/_theme.scss
+++ b/packages/bootstrap/scss/spreadsheet/_theme.scss
@@ -35,14 +35,14 @@
 
     // Cell editor
     .k-spreadsheet-cell-editor {
-        color: $panel-text;
-        background-color: $panel-bg;
+        color: $component-text;
+        background-color: $component-bg;
     }
 
 
     // Cells
     .k-spreadsheet-merged-cell {
-        background-color: $panel-bg;
+        background-color: $component-bg;
     }
 
 
@@ -58,12 +58,12 @@
     }
 
     .k-spreadsheet .k-single-selection::after {
-        border-color: $panel-bg;
+        border-color: $component-bg;
         background-color: $selected-bg;
     }
     .k-spreadsheet-active-cell {
         box-shadow: inset 0 0 0 1px $selected-bg;
-        background-color: $panel-bg;
+        background-color: $component-bg;
 
         &.k-right {
             box-shadow: inset 0 0 0 1px $selected-bg, inset -1px 0 0 1px $selected-bg;
@@ -84,7 +84,7 @@
         box-shadow: inset 0 0 0 1px $selected-bg;
     }
     .k-spreadsheet .k-auto-fill-punch {
-        background-color: rgba( $panel-bg, .5 );
+        background-color: rgba( $component-bg, .5 );
     }
 
 
@@ -162,9 +162,9 @@
 
         .k-spreadsheet-value-treeview-wrapper {
             @include fill(
-                $panel-text,
-                $panel-bg,
-                $panel-border
+                $component-text,
+                $component-bg,
+                $component-border
             );
         }
     }
